ci: version steamcmd image digest

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,16 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>USA-RedDragon/renovate-configs"
+  ],
+  "regexManagers": [
+      {
+          "fileMatch": [
+              "(^|/)\\.github\\/workflows\\/.*\\.yaml$"
+          ],
+          "matchStrings": [
+              "STEAMCMD_IMAGE: (?<depName>.*?):(?<currentValue>.*?)@(?<currentDigest>sha256:[a-f0-9]+)"
+          ],
+          "datasourceTemplate": "docker"
+      }
   ]
 }
