--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -89,8 +89,7 @@ jobs:
           gh release create "build-${VERSION}" \
               --repo="$GITHUB_REPOSITORY" \
               --title="Palworld Server build ${VERSION}" \
-              --notes="Build: \`${VERSION}\` \
-          SHA256 Digest: \`${DIGEST}\`"
+              --notes="Build: \`${VERSION}\` SHA256 Digest: \`${DIGEST}\`"
 
       - name: Upload Build
         if: steps.check-tag.outputs.tag-exists == 'false'
